add_subdirectory(basic)
add_subdirectory(electrical)
add_subdirectory(fileio)
add_subdirectory(filter)
add_subdirectory(fourier)
add_subdirectory(http)
add_subdirectory(math)
add_subdirectory(soapy)
add_subdirectory(testing)
add_subdirectory(analog)

# shared library that contains all registered blocks
add_subdirectory(libs)
