add_subdirectory(audio)
add_subdirectory(common)
add_subdirectory(basic)
add_subdirectory(electrical)
add_subdirectory(fileio)
add_subdirectory(filter)
add_subdirectory(fourier)
add_subdirectory(http)
add_subdirectory(math)
add_subdirectory(sdr)
add_subdirectory(testing)
add_subdirectory(timing)
add_subdirectory(device)

# shared library that contains all registered blocks
add_subdirectory(libs)
