gr_core_dep = declare_dependency(include_directories: './include/', dependencies : [fmt_dep, reflcpp_dep, pmt_dep, vir_dep, gr_meta_dep])

header_files = [
    'include/gnuradio-4.0/annotated.hpp',
    'include/gnuradio-4.0/buffer.hpp',
    'include/gnuradio-4.0/buffer_skeleton.hpp',
    'include/gnuradio-4.0/circular_buffer.hpp',
    'include/gnuradio-4.0/claim_strategy.hpp',
    'include/gnuradio-4.0/dataset.hpp',
    'include/gnuradio-4.0/graph.hpp',
    'include/gnuradio-4.0/graph_yaml_importer.hpp',
    'include/gnuradio-4.0/history_buffer.hpp',
    'include/gnuradio-4.0/node.hpp',
    'include/gnuradio-4.0/node_registry.hpp',
    'include/gnuradio-4.0/node_traits.hpp',
    'include/gnuradio-4.0/plugin.hpp',
    'include/gnuradio-4.0/plugin_loader.hpp',
    'include/gnuradio-4.0/port.hpp',
    'include/gnuradio-4.0/port_traits.hpp',
    'include/gnuradio-4.0/profiler.hpp',
    'include/gnuradio-4.0/reader_writer_lock.hpp',
    'include/gnuradio-4.0/reflection.hpp',
    'include/gnuradio-4.0/scheduler.hpp',
    'include/gnuradio-4.0/sequence.hpp',
    'include/gnuradio-4.0/settings.hpp',
    'include/gnuradio-4.0/tag.hpp',
    'include/gnuradio-4.0/transactions.hpp',
    'include/gnuradio-4.0/wait_strategy.hpp'
]
install_headers(header_files, preserve_path: true)
