add_ut_test(qa_algorithm_fourier)
add_ut_test(qa_DataSetEstimators)
add_ut_test(qa_FilterTool)
add_ut_test(qa_ImCanvas)
add_ut_test(qa_ImChart)
add_ut_test(qa_ImGraph)
add_ut_test(qa_SchmittTrigger)
add_ut_test(qa_SimdFFT)
target_link_libraries(qa_algorithm_fourier PRIVATE gnuradio-algorithm)
target_link_libraries(qa_DataSetEstimators PRIVATE gnuradio-algorithm)
target_link_libraries(qa_FilterTool PRIVATE gnuradio-algorithm)
target_link_libraries(qa_ImCanvas PRIVATE gnuradio-algorithm)
target_link_libraries(qa_ImChart PRIVATE gnuradio-algorithm)
target_link_libraries(qa_ImGraph PRIVATE gnuradio-algorithm)
target_link_libraries(qa_SchmittTrigger PRIVATE gnuradio-algorithm)
target_link_libraries(qa_SimdFFT PRIVATE gnuradio-algorithm)

add_executable(example_ImChart example_ImChart.cpp)
target_link_libraries(example_ImChart PRIVATE gnuradio-algorithm)
